# RBI_MPR_RAG

./: .gitignore  Multi_Report_RAG_Explainer.ipynb  RBI_RAG (1).ipynb  RBI_RAG_Project_Explainer.html  README.md  pyproject.toml  requirements-v2.txt  requirements.txt  streamlit_app.py
configs/: baseline.yaml  final_retrieval_selected.yaml  mmr_experiments.yaml  multi_report.yaml  optimisation_experiments.yaml  reports.yaml  structural_optimisation_experiments.yaml  v2_mmr_selected_retrieval.yaml  v2_selected_retrieval.yaml  v2_unstructured_cohere_experiments.yaml
scripts/: __init__.py  archive_invalid_stage_a_runs.py  build_index.py  diagnose_retrieval.py  evaluate_final_generation_bakeoff.py  evaluate_final_mmr_generation.py  freeze_temporal_datasets.py  generate_final_generation_bakeoff_report.py  generate_final_mmr_generation_report.py  generate_final_packaging.py  generate_final_rag_comparison.py  generate_mmr_report.py  generate_project_explainer_html.py  generate_report.py  generate_stage_a_posthoc_artifacts.py  generate_v2_generation_report.py  generate_v2_sufficiency_report.py  generate_v2_unstructured_cohere_report.py  run_final_generation_bakeoff.py  run_final_mmr_generation.py  run_generation_evaluation.py  run_mmr_experiments.py  run_phase6b_heldout_retrieval.py  run_phase6b_structural_experiments.py  run_phase7_final_evaluation.py  run_retrieval_evaluation.py  run_stage_a_ablations.py  run_streamlit_ui_check.py  run_v2_generation_evaluation.py  run_v2_sufficiency_generation.py  run_v2_unstructured_cohere_experiments.py  setup_poppler_for_unstructured.py  (+7 more)
(+1205 files in other folders)
