[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rbi-mpr-rag"
version = "0.1.0"
description = "Reproducible RAG baseline for the RBI April 2025 Monetary Policy Report"
requires-python = ">=3.11,<3.14"
dependencies = [
  "chromadb==1.5.9",
  "deepeval==4.1.0",
  "langchain==1.3.13",
  "langchain-chroma==1.1.0",
  "langchain-community==0.4.2",
  "langchain-groq==1.1.3",
  "langchain-huggingface==1.2.2",
  "pypdf==6.14.2",
  "python-dotenv==1.2.2",
  "PyYAML==6.0.3",
  "rank-bm25==0.2.2",
  "sentence-transformers==5.6.0",
]

[project.optional-dependencies]
dev = ["pytest==9.1.1"]

[project.scripts]
rbi-rag = "rbi_rag.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
